Rework to use the new Plugin loader.